<resources>
    <string name="app_name" translatable="false">PilferShush Scanner</string>
    <string name="action_session_name">Set session name</string>
    <string name="dialog_session_name">Enter suffix for save files</string>
    <string name="session_default_name" translatable="false">capture</string>
    <string name="passive_service_name">PiferShush Passive</string>
    <string name="active_service_name">PiferShush Active</string>
    <string name="dialog_storage_warn_title">Caution</string>
    <string name="dialog_storage_warn_text">limited storage space for recording.</string>
    <string name="action_audio_scan_settings">NUHF Scan steps</string>
    <string name="dialog_freq_step">Frequency steps</string>
    <string name="freq_step_10_text" translatable="false">10 Hz</string>
    <string name="freq_step_25_text" translatable="false">25 Hz (default)</string>
    <string name="freq_step_50_text" translatable="false">50 Hz</string>
    <string name="freq_step_75_text" translatable="false">75 Hz</string>
    <string name="freq_step_100_text" translatable="false">100 Hz</string>
    <string name="action_audio_scan_ranges">NUHF Scan range</string>
    <string name="dialog_freq_range">Frequency range</string>
    <string name="freq_range_one" translatable="false">18kHz - 21kHz (default)</string>
    <string name="freq_range_two" translatable="false">19kHz - 22kHz</string>
    <string name="sdk_names_list">List of NUHF/ACR SDK names searched:\u0020</string>
    <string name="action_audio_beacons">Check Beacon Apps</string>
    <string name="dialog_audio_beacon_apps">NUHF/ACR List</string>
    <string name="action_override_scan">Scan User App</string>
    <string name="dialog_override_scan_apps">Scan Apps List</string>
    <string name="action_jammer">Active Jammer Settings</string>
    <string name="action_drift_speed">Drift Speed Settings</string>
    <string name="action_write_file">Write to file option</string>
    <string name="dialog_write_file">Allow write to file?</string>
    <string name="dialog_write_message">saved to Download(s)/PilferShush/</string>
    <string name="dialog_write_file_yes">Yes</string>
    <string name="dialog_write_file_no">No</string>
    <string name="action_storage_admin">Storage admin</string>
    <string name="dialog_storage_size">Print storage size used</string>
    <string name="dialog_delete_empty_logs">Delete empty logs</string>
    <string name="dialog_delete_all_files">Delete all audio files</string>
    <string name="dialog_free_storage_size">Free storage space</string>
    <string name="dialog_cautioned">Cautioned List</string>
    <string name="action_services">get Services</string>
    <string name="dialog_services">User Apps with Services</string>
    <string name="action_receivers">get Receivers</string>
    <string name="dialog_receivers">User Apps with Receivers</string>
    <string name="focus_text">Expert View (scrollable): </string>
    <string name="debug_text">loading PilferShush.</string>
    <string name="debug_view_button_text">expert</string>
    <string name="main_view_button_text">basic</string>
    <string name="main_scan_text">PilferShush scanner initialising.</string>
    <string name="timer_text">timer - 00:00</string>
    <string name="action_sensitivity_settings">Sensitivity</string>
    <string name="dialog_sensitivity_text">Beacon loudness level</string>
    <string name="magnitude_50_text">50 dB (light rain)</string>
    <string name="magnitude_60_text">60 dB (talking)</string>
    <string name="magnitude_70_text">70 dB (busy traffic)</string>
    <string name="magnitude_80_text">80 dB (heavy traffic)</string>
    <string name="magnitude_90_text">90 dB (trucks, shouting)</string>
    <string name="magnitude_93_text">94 dB (food mixer, default)</string>
    <string name="magnitude_100_text">100 dB (jack hammer)</string>
    <string name="action_window_settings">FFT Window</string>
    <string name="dialog_window_text">FFT Window type</string>
    <string name="dialog_window_fft_1" translatable="false">Hann</string>
    <string name="dialog_window_fft_2" translatable="false">Blackman (default)</string>
    <string name="dialog_window_fft_3" translatable="false">Hamming</string>
    <string name="dialog_window_fft_4" translatable="false">Nuttall</string>
    <string name="dialog_window_fft_5" translatable="false">Blackman-Nuttall</string>
    <string name="headset_state_1">Headset is unplugged, mute output</string>
    <string name="headset_state_2">Headset is plugged in.</string>
    <string name="headset_state_3">Headset state unknown</string>
    <string name="audiofocus_check_1">AudioFocus check\u2026</string>
    <string name="audiofocus_check_2">AudioFocus request granted.</string>
    <string name="audiofocus_check_3">AudioFocus request failed.</string>
    <string name="audiofocus_check_4">AudioFocus unknown.</string>
    <string name="audiofocus_check_5">AudioFocus interrupt request.</string>
    <string name="audiofocus_1">Audio Focus Listener: LOSS.</string>
    <string name="audiofocus_2">Audio Focus Listener: LOSS_TRANSIENT.</string>
    <string name="audiofocus_3">Audio Focus Listener: LOSS_TRANSIENT_DUCK.</string>
    <string name="audiofocus_4">Audio Focus Listener: REQUEST_FAIL.</string>
    <string name="audiofocus_5">Audio Focus Listener: GAIN.</string>
    <string name="audiofocus_6">Audio Focus Listener: GAIN_TRANSIENT.</string>
    <string name="audiofocus_7">Audio Focus Listener: GAIN_TRANSIENT_DUCK.</string>
    <string name="audiofocus_8">Audio Focus Listener: UNKNOWN STATE.</string>
    <string name="beacon_check_1">NUHF/ACR</string>
    <string name="userapp_check_1">User App Scan</string>
    <string name="audio_apps_check_1">NO NUHF/ACR APPS FOUND.</string>
    <string name="user_apps_check_1">NO USER APPS FOUND FOR SCAN.</string>
    <string name="main_scanner_1">SCANNING</string>
    <string name="main_scanner_2">Running scans on user installed apps\u2026</string>
    <string name="main_scanner_3">Record audio apps found:\u0020</string>
    <string name="main_scanner_4">No record audio apps found.</string>
    <string name="main_scanner_5">\u0020NUHF/ACR SDKs detected.</string>
    <string name="main_scanner_6">No NUHF/ACR SDKs detected.</string>
    <string name="main_scanner_10">Listening for near-ultra high audio\u2026</string>
    <string name="main_scanner_11" translatable="false">scanner</string>
    <string name="main_scanner_12">Stop listening for audio.</string>
    <string name="main_scanner_13">Detected possible NUHF audio.</string>
    <string name="main_scanner_14">Frequency list size:\u0020</string>
    <string name="main_scanner_15">Original sequence as transmitted:</string>
    <string name="main_scanner_16">No detected NUHF audio signals.</string>
    <string name="main_scanner_17">[-: end of scan :-]</string>
    <string name="main_scanner_22" translatable="false">active</string>
    <string name="main_scanner_23" translatable="false">passive</string>
    <string name="main_scanner_24">Stopping scanner when jamming.</string>
    <string name="main_scanner_25">Stopping jamming when scanning.</string>
    <string name="main_scanner_26">Running passive jamming\u2026</string>
    <string name="main_scanner_27">Running active jamming\u2026</string>
    <string name="main_scanner_28">Stop active jamming.</string>
    <string name="main_scanner_29">Stop passive jamming.</string>
    <string name="main_scanner_30">PASSIVE</string>
    <string name="main_scanner_31">ACTIVE</string>
    <string name="main_scanner_32">Stop scanner to free the microphone.</string>
    <string name="option_dialog_1">Limited storage space found.</string>
    <string name="option_dialog_2">Log storage size:\u0020</string>
    <string name="option_dialog_4">Delete ALL log files.</string>
    <string name="option_dialog_5">Free storage space: </string>
    <string name="option_dialog_6">Write to file enabled.</string>
    <string name="option_dialog_7">Write to file disabled.</string>
    <string name="option_dialog_8">Polling speed (ms):\u0020</string>
    <string name="option_dialog_9">Frequency steps (hz):\u0020</string>
    <string name="option_dialog_10">Frequency range set 18kHz - 21kHz.</string>
    <string name="option_dialog_11">Frequency range set 19kHz - 22kHz.</string>
    <string name="option_dialog_12">Loudness level (dB):\u0020</string>
    <string name="option_dialog_13">FFT Window set to:\u0020</string>
    <string name="init_state_1">PilferShush Scanner version\u0020</string>
    <string name="init_state_2">Using\u0020</string>
    <string name="init_state_3">Settings can be changed via the Options menu.</string>
    <string name="init_state_4">The Detailed View has logging and more information from scans.</string>
    <string name="init_state_5">It also has a user app scan for services and receivers.</string>
    <string name="init_state_6">Save scanner audio to file:\u0020</string>
    <string name="init_state_7_1">Wav audio:\u0020</string>
    <string name="init_state_7_2">, little-endian.</string>
    <string name="init_state_8_1">Raw audio:\u0020</string>
    <string name="init_state_8_2">, big-endian.</string>
    <string name="init_state_9">Free storage space:\u0020</string>
    <string name="init_state_10_1">Press\u0020</string>
    <string name="init_state_10_2">\u0020button to scan for NUHF audio.</string>
    <string name="init_state_11">DO NOT RUN SCANNER FOR A LONG TIME.</string>
    <string name="init_state_12">PilferShush init failed.</string>
    <string name="init_state_13">Failed to init audio device.</string>
    <string name="init_state_17">Error: no MIC or Audio Record session.</string>
    <string name="usb_state_1">checking usb host for audio device.</string>
    <string name="usb_state_2">USB:\u0020</string>
    <string name="usb_state_3">usb audio device not found, using internal.</string>
    <string name="usb_state_4">\u0020has permission for USB device.</string>
    <string name="usb_state_5">\u0020no USB device container or device.</string>
    <string name="usb_state_6">\u0020permission denied for USB device.</string>
    <string name="perms_state_1">Record Audio</string>
    <string name="perms_state_2">Save audio and text files</string>
    <string name="perms_state_3">Permissions request:\u0020</string>
    <string name="perms_state_4">Some permissions denied</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_okay">OK</string>
    <string name="button_noise" translatable="false">Noise</string>
    <string name="button_eq" translatable="false">EQ</string>
    <string name="app_status_1">passive jammer running.</string>
    <string name="app_status_2">passive jammer not running.</string>
    <string name="app_status_3">active jammer running.</string>
    <string name="app_status_4">active jammer not running.</string>
    <string name="app_status_5">EQ is turned off.</string>
    <string name="app_status_6">EQ is turned on.</string>
    <string name="app_status_7">EQ is not available.</string>
    <string name="app_status_8">Active jammer switched to tones.</string>
    <string name="app_status_9">Active jammer switched to whitenoise.</string>
    <string name="app_status_10">Passive jammer running.</string>
    <string name="app_status_11">Active jammer running.</string>
    <string name="app_status_12">Tap to return to app.</string>
    <string name="jammer_dialog_1">Change active jammer signal type.</string>
    <string name="jammer_dialog_2">Audible tone drift (~440Hz)</string>
    <string name="jammer_dialog_3">Full NUHF drift (18kHz-24kHz)</string>
    <string name="jammer_dialog_4">1000Hz NUHF drift with user carrier</string>
    <string name="jammer_dialog_5">User NUHF drift with user carrier</string>
    <string name="jammer_dialog_6">Carrier frequency (18kHz - 24kHz):</string>
</resources>