<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.cityfreqs.pilfershush.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_audio_scan_settings"
        android:orderInCategory="20"
        app:showAsAction="never"
        android:title="@string/action_audio_scan_settings"/>

    <item
        android:id="@+id/action_sensitivity_settings"
        android:orderInCategory="30"
        app:showAsAction="never"
        android:title="@string/action_sensitivity_settings"/>

    <item
        android:id="@+id/action_audio_beacons"
        android:orderInCategory="30"
        app:showAsAction="never"
        android:title="@string/action_audio_beacons"/>

    <item
        android:id="@+id/action_override_scan"
        android:orderInCategory="40"
        app:showAsAction="never"
        android:title="@string/action_override_scan"/>

    <item
        android:id="@+id/action_write_file"
        android:orderInCategory="50"
        app:showAsAction="never"
        android:title="@string/action_write_file"/>

</menu>